<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.braedin.butler.vspeed.vario.app.vSpeedVarioActivity">



    <group android:id="@+id/extra">
        <item
            android:id="@+id/action_connected_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/action_firmwareupdates"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_refreshcache"
            android:title="@string/action_refreshcache"
            app:showAsAction="never" />

    </group>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_info_outline_menu"
        android:title="@string/action_info"
        app:showAsAction="always" />


    <group android:id="@+id/vSpeedVarioControls">
        <item
            android:id="@+id/action_displaymode"
            android:title="@string/vspeedvario_action_displaymode_format"
            app:showAsAction="never">

            <menu>
                <group
                    android:id="@+id/displayMode"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_displaymode_timestamp"
                        android:title="@string/vspeedvario_displaymode_updatingvalue"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_displaymode_text"
                        android:title="@string/vspeedvario_displaymode_text"
                        app:showAsAction="never" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/action_datamode"
            android:title="@string/vspeedvario_action_datamode_format"
            app:showAsAction="never">

            <menu>
                <group
                    android:id="@+id/dataMode"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_datamode_ascii"
                        android:title="@string/vspeedvario_format_ascii"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_datamode_hex"
                        android:title="@string/vspeedvario_format_hexadecimal"
                        app:showAsAction="never" />
                </group>
            </menu>
        </item>

        <group
            android:id="@+id/vSpeedVarioUserTextControls"
            android:checkableBehavior="all">
            <!--<item
                android:id="@+id/action_echo"
                android:title="@string/vspeedvario_action_echo"
                app:showAsAction="never" />-->
            <item
                android:id="@+id/action_eol"
                android:title="@string/vspeedvario_action_eol"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_beep"
                android:title="@string/vspeedvario_action_beep"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_displaybattery"
                android:title="@string/vspeedvario_action_displaybattery"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_oled"
                android:title="@string/vspeedvario_action_oled"
                app:showAsAction="never" />
        </group>
    </group>



</menu>
